fix scene illustration alignment when stacked for Guidance block

--- a/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
+++ b/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
@@ -316,6 +316,10 @@ $scene-illustration-size-mobile: 200px;
 }
 
 .stacked {
+  &.stackIllustration .illustrationWrapper {
+    margin: 0 auto;
+  }
+
   .descriptionAndActions {
     flex-direction: column;
     align-items: unset;
